grammars/tree-sitter-oberon2/grammar.js
    module: $ => choice(
      seq(
        $.module_header,
        optional($.import_list),
        optional($.const_decls),
        optional($.type_decls),
        optional($.variable_decls),
        repeat($.procedure_decls),
        optional(seq(
          $.kBegin,
          optional($.statement_seq)
        )),
        $.module_footer
      ),
      seq(
        $.definition_header,
        optional($.import_list),
        optional($.const_decls),
        optional($.type_decls),
        optional($.variable_decls),
        repeat($.definition_proc_decl),
        $.module_footer
      )
    ),
    module_header: $ => seq($.kModule, $.ident, ';'),
    module_footer: $ => seq($.kEnd, $.ident, '.'),

    // definition_proc_decl = procedure_heading ";"
    definition_proc_decl: $ => seq($.procedure_heading, ';'),

    // import_list = "IMPORT" import {"," import}
    type_decls: $=> seq(
      $.kType, 
      repeat(seq(
        $.type_decl, ';'
      ))
    ),

    // variable_decls =["VAR" {variable_decl ";"}]
    procedure_decls: $ => seq(
      choice($.procedure_decl, $.forward_decl), ';'
    ),

    // const_decl = ident_def "=" const_expresion
    type_decl: $ => seq(
      $.ident_def, '=', $.type
    ),

    // struct_type = array_type | record_type | pointer_type | procedure_type
    struct_type: $ => choice(
      $.array_type,
      $.record_type,
      $.pointer_type,
      $.procedure_type
    ),

    // array_type = "ARRAY" length {"," length} "OF" type
    record_type: $ => seq(
      $.kRecord,
      optional(seq(
        '(',
        $.base_type,
        ')'
      )),
      optional($.field_list_seq),
      $.kEnd
    ),

    // base_type = qualident
    base_type: $ => $.qualident,

    // field_list_seq = field_list {";" field_list}
    // FieldList is itself optional in the EBNF ([...]), same shape as StatementSeq — the
    // corpus relies on a trailing ";" before "END" (e.g. voc's Printer.Mod). Same two-branch
    // fix as statement_seq: every branch must still consume at least one token, so the
    // "totally empty" case is expressed by omitting field_list_seq at the call site
    // (already optional($.field_list_seq) in record_type), not by this rule matching nothing.
    field_list_seq: $ => choice(
      seq($.field_list, repeat(seq(';', optional($.field_list)))),
      repeat1(seq(';', optional($.field_list)))
    ),

    // field_list = [ident_list ":" type]
    field_list: $ => seq(
      $.ident_list, ':', $.type
    ),

    // ident_list = ident_def {"," ident_def}
    ident_list: $ => seq(
      $.ident_def, repeat(seq(',', $.ident_def))
    ),

    // pointer_type = "POINTER" "TO" type
    formal_params: $ => seq(
      "(",
      optional(seq(
        $.fp_section, repeat(seq(';', $.fp_section))
      )),
      ")",
      optional(seq(
        ':', $.qualident
      ))
    ),

    // fp_section = ["VAR"] ident {"," ident} ":" formal_type
    fp_section: $ => seq(
      optional($.kVar),
      $.ident, repeat(seq(',', $.ident)),
      ':',
      $.formal_type
    ),

    // formal_type = {"ARRAY" "OF"} (qualident | procedure_type)
    // The report's FPSection uses full Type (Qualident | ARRAY OF Type | RECORD... |
    // POINTER TO Type | PROCEDURE [FormalPars]); this grammar's formal_type has always been
    // narrower than that. Widened only for the case the corpus actually uses — a PROCEDURE
    // type as a callback parameter (voc's MultiArrays.Mod) — not the full Type recursion.
    formal_type: $ => seq(
      repeat(seq($.kArray, $.kOf)),
      choice($.qualident, $.procedure_type)
    ),

    // qualident = [ident "."] ident
    qualident: $ => prec.left(choice(
      seq($.ident),
      seq(field("qualifier", $.ident), '.', field("property", $.ident)),
    )),

    // ident_def = ident ["*" | "-"]
    ident_def: $ => seq(
      $.ident, optional(choice($.kStar, $.kMinus))
    ),

    // variable_decl = ident_list ":" type
    type: $ => choice(
      $.qualident,
      $.struct_type
    ),

    // procedure_decl = procedure_heading ";" procedure_body ident
    procedure_decl: $ => seq(
      $.procedure_heading, ';', $.procedure_body, $.ident
    ),

    // procedure_heading = "PROCEDURE" [receiver] ident_def [formal_params]
    procedure_heading: $ => seq(
      $.kProcedure, optional($.receiver), $.ident_def, optional($.formal_params)
    ),

    // receiver = "(" ["VAR"] ident ":" ident ")"
    procedure_body: $ => seq(
      //$.declaration_seq,
      optional($.const_decls),
      optional($.type_decls),
      optional($.variable_decls),
      repeat($.procedure_decls),
      optional(seq($.kBegin, optional($.statement_seq))),
      $.kEnd
    ),

    // expression = simple_expression [relation simple_expression]
    string: $ => token(string_literal),
    // number = integer | real
    integer: $ => choice(
      token(seq(digit, repeat(digit))),
      token(seq(hex_digit, 'H'))
    ),
    
    // mathematical operators
    kStar:  $ => '*',
    kMinus: $ => '-',
    kOf: $ => 'OF',
    kEnd: $ => 'END',
    kVar: $ => 'VAR',
    kType: $ => 'TYPE',

    kArray: $ => 'ARRAY',
    kBegin: $ => 'BEGIN',
    kModule: $ => 'MODULE',
    kRecord: $ => 'RECORD',
    kProcedure: $ => 'PROCEDURE',

    ident: $ => token(identifier),
